<resources>
    <string name="app_name">ILAURIA ARTISAN</string>
    <string name="logoDesc">logo ilauria artisan</string>
    <string name="finaliser">Finaliser votre compte ilauria</string>
    <string name="bienvenue">Bienvenue X</string>
    <string name="plusTard">Plus tard</string>
    <string name="plusTardBtnDesc"> Bouton Plus tard</string>
    <string name="editProfilePic">Changer la photo de profil</string>
    <string name="photoBtnText">Ajouter des photos</string>
    <string name="photoBtnDesc"> Bouton pour ajouter des photos</string>
    <string name="extended_fab_content_desc">Ajouter des photos</string>
    <string name="extended_fab_label">Ajouter des photos</string>
    <string name="page_title">Compte Artisan</string>

    <string name="nested">aucune idée</string>
    <string name="profilName">Karim krimo</string>
    <string name="profilText">Bonjour, Krimo nous sommes heureux de vous revoir.</string>
    <string name="descTitle">Description</string>


    <string name="editDesc">Modifier la description</string>
    <string name="travailTitle">Votre travail</string>
    <string name="desc"></string>
    <string name="cameraBtnDesc">camera btn</string>


    <string name="menu_icon"></string>
    <string name="menu_desc"></string>


    <string name="option1">Voir les avis</string>

    <string name="option2">Voir historique</string>

    <string name="option3">Se décconnecter</string>
    <string name="title_activity_nav">nav_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- 1ere interface nari -->


    <string name="hello_world">Hello world!</string>
    <string name="ILAURIA">ILAURIA</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="slogan">l\'art de la perfection à portée de main</string>
    <string name="title_activity_bienvenu">BienvenuActivity</string>
    <string name="trouverartisan">Trouver un artisan</string>
    <string name="jesuispro">Je suis un professionnel</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="categorie">Catégorie d\'artisan</string>
    <string name="rechere">Nom du metier</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_activity_compte_client">CompteClientActivity</string>
    <string name="compteclient">Compte Client</string>
    <string name="desclogo">logo</string>

    <string name="commençons">Commençons !</string>
    <string name="metier">metier</string>
    <string-array name="planets_array">
        <item>peintre</item>
        <item>mecanicien</item>
        <item>couturier</item>
        <item>macon</item>
    </string-array>

</resources>